# SignalForge

./: .env.example  .gitignore  README.md  pyproject.toml  release_notes.md
scripts/: dedup_participants.py  fire.sh  status-banner.sh  status-devto.sh  status-forks.sh  status-freshness.sh  status-git.sh  status-hackathons.sh  status-hn.sh  status-lib.sh  status-rb2b.sh  status-runs.sh  status-search.sh  status-summary.sh  status.sh  wtf-panel.sh  wtf.yml
src/devpost_scraper/: backboard_client.py  campaigns.py  cli.py  cli_assistant.py  cli_auto.py  cli_campaigns.py  cli_devto.py  cli_emit.py  cli_github_forks.py  cli_github_search.py  cli_harvest.py  cli_hn.py  cli_lookup.py  cli_participants.py  cli_rb2b.py  cli_report.py  cli_run.py  cli_search.py  cli_shared.py  csv_export.py  customerio.py  db.py  gmail_sender.py  models.py  scraper.py  scraper_devpost.py  scraper_devto.py  scraper_email.py  scraper_github.py  scraper_hn.py  scraper_rb2b.py
