[project]
name = "signalforge-cli"
version = "0.5.0"
description = "CLI for extracting emails and sending customer.io events"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "backboard-sdk>=1.5.9",
  "beautifulsoup4>=4.12.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
signalforge = "devpost_scraper.cli:main"
signalforge-participants = "devpost_scraper.cli:participants_main"
signalforge-harvest = "devpost_scraper.cli:harvest_main"
signalforge-github-forks = "devpost_scraper.cli:github_forks_main"
signalforge-rb2b = "devpost_scraper.cli:rb2b_main"
signalforge-auto = "devpost_scraper.cli:auto_main"
signalforge-lookup = "devpost_scraper.cli:lookup_main"
signalforge-gh-search = "devpost_scraper.cli:github_search_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devpost_scraper"]

[tool.uv]
package = true
